laid out gallery area. removed img tags, added bg images. fixed layout issues

--- a/agphoto-new/sass/components/_section.sass
+++ b/agphoto-new/sass/components/_section.sass
@@ -15,6 +15,10 @@
   @include fluid-spacing(padding-left, 37.5rem, 80rem, 2rem, 20rem)
   @include fluid-spacing(padding-right, 37.5rem, 80rem, 2rem, 20rem)
 
+.section--work
+  @include fluid-spacing(padding-left, 56rem, 100rem, 2rem, 20rem)
+  @include fluid-spacing(padding-right, 56rem, 100rem, 2rem, 20rem)
+
 // Grid Styles
 // ================================================================
 @supports (display: grid)
