--- a/agphoto-new/sass/components/_slideshow.sass
+++ b/agphoto-new/sass/components/_slideshow.sass
@@ -8,6 +8,9 @@
 
 .slideshow__slide
 
+.slideshow__slide--mini
+  background: center/cover no-repeat
+
 
 
 // Grid Styles
@@ -18,8 +21,8 @@
 
   .slideshow--mini
     display: grid
-    align-items: center
-    justify-items: center
+    align-items: stretch
+    justify-items: stretch
     grid-template-rows: 1fr
     grid-template-columns: 1fr
 
@@ -61,6 +64,14 @@
     grid-column: 1 / 2
     grid-row: 2 / 3
 
+  .slideshow__overlay
+    z-index: 1
+    grid-row: 1 / 2
+    grid-column: 1 / 2
+    display: grid
+    align-items: center
+    justify-items: center
+
 // Splash slideshow styles
 // ================================================================
 .slideshow__radio
@@ -94,49 +105,52 @@
 
 // Mini slideshow styles
 // ================================================================
+.slideshow--mini
+  .slideshow__link
+    color: var( --white )
+    opacity: 0
+    transition: opacity calc(var( --standard-easing-duration ) / 2) cubic-bezier( var( --standard-easing-bezier ) ) 
+    pointer-events: none
+  .slideshow__overlay:hover .slideshow__link
+    opacity: 1
+    pointer-events: initial
+    cursor: pointer
+
 .slideshow--mini .slideshow__slide
   will-change: opacity
 
 .work__slideshow-1 .slideshow__slide--1
   animation: fade-loop-3 12s infinite
-
 .work__slideshow-1 .slideshow__slide--2
   animation: fade-loop-3 12s infinite
   animation-delay: 4s
-
 .work__slideshow-1 .slideshow__slide--3
   animation: fade-loop-3 12s infinite
   animation-delay: 8s
 
 .work__slideshow-2 .slideshow__slide--1
   animation: fade-loop-3 15s infinite
-
 .work__slideshow-2 .slideshow__slide--2
   animation: fade-loop-3 15s infinite
   animation-delay: 5s
-
 .work__slideshow-2 .slideshow__slide--3
   animation: fade-loop-3 15s infinite
   animation-delay: 10s
 
 .work__slideshow-3 .slideshow__slide--1
   animation: fade-loop-3 12s infinite
-
 .work__slideshow-3 .slideshow__slide--2
   animation: fade-loop-3 12s infinite
   animation-delay: 4s
-
 .work__slideshow-3 .slideshow__slide--3
   animation: fade-loop-3 12s infinite
   animation-delay: 8s
 
 .work__slideshow-4 .slideshow__slide--1
   animation: fade-loop-3 15s infinite
-
 .work__slideshow-4 .slideshow__slide--2
   animation: fade-loop-3 15s infinite
   animation-delay: 5s
-
 .work__slideshow-4 .slideshow__slide--3
   animation: fade-loop-3 15s infinite
   animation-delay: 10s
